fix: add translateZ solution for card overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,7 @@ body {
     left: 0;
     width:100%;
     height: 100%;
-    transform: translate3d(0,0,0);
-    -webkit-transform: translate3d(0,0,0);
+    transform: translateZ(1000px);
     z-index: 2;
     visibility: hidden;
 }
@@ -83,8 +82,7 @@ body {
     animation-name: outcome-zoom;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
-    transform: translate3d(0,0,0);
-    -webkit-transform: translate3d(0,0,0);
+    transform: translateZ(1000px);
     z-index: 100;
 }
 @keyframes outcome-zoom {
@@ -446,8 +444,7 @@ visibility: hidden;
     animation-name: feedback-zoom;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
-    transform: translate3d(0,0,0);
-    -webkit-transform: translate3d(0,0,0);
+    transform: translateZ(1000px);
     z-index: 99;
 }
 @keyframes feedback-zoom {
